all unnecessary removed